classDiagram
    %% PawPal+ — Final UML Class Diagram (matches pawpal_system.py)

    class Owner {
        +str owner_id
        +str name
        +str email
        +str phone
        +List~Pet~ pets
        +add_pet(Pet pet) void
        +remove_pet(str pet_id) void
        +get_pets() List~Pet~
        +update_contact_info(str email, str phone) void
    }

    class Pet {
        +str pet_id
        +str name
        +str species
        +str breed
        +int age
        +float weight
        +List~Task~ tasks
        +Owner owner
        +add_task(Task task) void
        +remove_task(str task_id) void
        +get_tasks() List~Task~
        +get_upcoming_tasks() List~Task~
    }

    class Task {
        +str task_id
        +str title
        +str description
        +str category
        +str priority
        +int duration_minutes
        +datetime due_date
        +bool is_complete
        +bool is_recurring
        +str frequency
        +Pet pet
        +mark_complete() void
        +reschedule(datetime new_date) void
        +is_overdue() bool
    }

    class PawPalSystem {
        +str system_id
        +List~Owner~ owners
        +register_owner(Owner owner) void
        +remove_owner(str owner_id) void
        +find_owner(str owner_id) Owner
        +get_all_pets() List~Pet~
        +send_reminder(Task task) str
        +generate_schedule(Owner owner, date day, int available_minutes) List~Task~
        +sort_by_time(List~Task~ tasks) List~Task~
        +filter_tasks(List~Task~ tasks, str pet_name, bool completed) List~Task~
        +complete_task(Task task) Task
        +detect_conflicts(List~Task~ tasks) List~str~
    }

    PawPalSystem "1" o-- "0..*" Owner : manages
    Owner "1" *-- "0..*" Pet : owns
    Pet "1" *-- "0..*" Task : has
    Task ..> Pet : belongs to
    Pet ..> Owner : belongs to
